--- a/Crypto/css/style.css
+++ b/Crypto/css/style.css
@@ -145,7 +145,7 @@ body {
     overflow-x: hidden;
 }
 
-/*section {
+*section {
     max-width: 1920px;
     margin-left: auto;
     margin-right: auto;
@@ -161,7 +161,10 @@ body {
 }
 
 .container {
-    max-width: 1305px;
+    max-width: 1224px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -306,6 +309,8 @@ body {
         pointer-events: auto;
         margin-top: 38px;
         margin-right: 10px;
+        background-color: #12132A;
+        z-index: 2;
     }
 }
 
@@ -349,7 +354,8 @@ body {
     top: 11%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 800px;
+    max-width: 800px;
+    width: 100%;
     height: auto;
     display: block;
     position: absolute;
@@ -479,7 +485,8 @@ body {
     }
 
     .elips-img img {
-        width: 500px;
+        max-width: 500px;
+        width: 100%;
     }
 
     .section1-bottom {
@@ -496,6 +503,11 @@ body {
 /* Sectiion 2 */
 
 .section2 {
+    display: block;
+    max-width: 1920px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     background: #162446;
 }
 
@@ -700,7 +712,8 @@ body {
     display: block;
     position: absolute;
     z-index: -1;
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     height: auto;
     object-fit: cover;
 }
@@ -803,7 +816,7 @@ body {
 
 @media (max-width: 768px) {
     .section4-left-item-elips img {
-        width: 500px;
+        max-width: 500px;
     }
 
     .section4-right-item-title h3 {
@@ -878,6 +891,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     max-width: 1200px;
+    width: 100%;
     height: auto;
 }
 
@@ -925,7 +939,8 @@ body {
 }
     @media (max-width: 768px) {
         .section5-item-right-ellipse img {
-            width: 500px;
+            max-width: 500px;
+            width: 100%;
     }
 
         .section5-item-left h2 {
@@ -1114,7 +1129,8 @@ body {
     display: block;
     position: absolute;
     z-index: -1;
-    width: 1200px;
+    max-width: 1200px;
+    width: 100%;
     height: auto;
     object-fit: cover;
 }
@@ -1217,7 +1233,8 @@ body {
 
 @media (max-width: 768px) {
     .section7-left-item-elips img {
-        width: 500px;
+        max-width: 500px;
+        width: 100%;
     }
 
     .section7-right-item h3 {
@@ -1381,10 +1398,15 @@ body {
     height: auto;
 }
 
+.section8-item2-ellipse {
+    display: block;
+    position: relative;
+}
+
 .section8-item2-ellipse img {
-    top: 55%;
-    left: 84%;
-    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    transform: translate(2%, -78%);
     display: block;
     position: absolute;
     z-index: -1;
