--- a/Crypto/css/style.css
+++ b/Crypto/css/style.css
@@ -215,6 +215,13 @@ body {
     line-height: 30px;
     text-transform: capitalize;
     color: #767799;
+    border-bottom: 1px solid transparent;
+    transition: 0.3s all;
+}
+
+.right-block a:hover {
+    border-color: #12132A;
+    border-color: currentColor;
 }
 
 .header-button a {
@@ -222,17 +229,21 @@ body {
     border: 2px solid #FFFFFF;
     padding: 10px 40px 10px 40px;
     color: #FFFFFF;
+    transition: all 0.2s ease;
+}
+
+.header-button a:hover {
+    box-shadow: 0 2px 4px #FFFFFF;
+    transform: translateY(2px);
 }
 
 @media (max-width: 1200px) {
-    .container {
- 
-    }
+    .container {}
 }
 
 @media (max-width: 992px) {
     .container {
-    max-width: 774px;
+        max-width: 774px;
     }
 
     .header-wrapper {
@@ -315,9 +326,7 @@ body {
 }
 
 @media (max-width: 768px) {
-    .container {
-        
-    }
+    .container {}
 }
 
 /* Section 1 */
@@ -326,7 +335,7 @@ body {
     display: block;
 }
 
-.container-fluid {
+.section1-wrapper {
     display: flex;
     justify-content: space-between;
     gap: 10px;
@@ -341,12 +350,14 @@ body {
 }
 
 .section1-img {
-    max-width: 572px;
+    display: block;
     margin-top: 73px;
 }
 
 .section1-img img {
-    max-width: 100%;
+    display: block;
+    max-width: 572px;
+    width: 100%;
     height: auto;
 }
 
@@ -406,9 +417,9 @@ body {
 
 .section1-bottom img {
     display: block;
-    width: 170px;
+    width: 100%;
     height: auto;
-    max-width: 100%;
+    max-width: 170px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -426,6 +437,12 @@ body {
     line-height: 25px;
     text-transform: capitalize;
     color: #FFFFFF;
+    transition: all 0.2s ease;
+}
+
+.section1-bottom a:hover {
+    box-shadow: 0 2px 4px #FFFFFF;
+    transform: translateY(2px);
 }
 
 @media (max-width: 1200px) {
@@ -433,21 +450,21 @@ body {
         font-size: 80px;
     }
 
-    .container-fluid {
+    .section1-wrapper {
         align-items: flex-end;
     }
 }
 
 @media (max-width: 992px) {
-    .container-fluid {
+    .section1-wrapper {
         flex-direction: column;
     }
-    
+
     .elips {
         margin-left: auto;
         margin-right: auto;
     }
-    
+
     .elips h1::before {
         top: -65px;
         right: 35px;
@@ -458,21 +475,21 @@ body {
         justify-content: center;
         text-align: center;
     }
-    
+
     .elips p {
         text-align: center;
     }
-    
-    .section1-img {
+
+    .section1-img img {
         margin-left: auto;
         margin-right: auto;
-        max-width: 80%;
+        width: 80%;
     }
-    
+
     .section1-bottom {
         justify-content: center;
     }
-    
+
 }
 
 @media (max-width: 768px) {
@@ -487,6 +504,10 @@ body {
     .elips-img img {
         max-width: 500px;
         width: 100%;
+    }
+
+    .section1-img img {
+        width: 60%;
     }
 
     .section1-bottom {
@@ -524,9 +545,22 @@ body {
 
 .section2-wrapper li img {
     display: block;
+    max-width: 190px;
     width: 100%;
     height: auto;
 }
+
+.section2-wrapper img {
+    color: #007BFF;
+    text-decoration: none;
+    font-size: 18px;
+    transition: transform 0.3s ease;
+}
+
+.section2-wrapper img:hover {
+    transform: scale(1.15);
+}
+
 
 .section2-wrapper ul {
     display: flex;
@@ -598,7 +632,7 @@ body {
     color: #767799;
 }
 
-.section3-item-container {
+.section3-bottom {
     margin-top: 38px;
     display: flex;
     flex-direction: row;
@@ -629,6 +663,9 @@ body {
 }
 
 .section3-item img {
+    max-width: 84px;
+    width: 100%;
+    height: auto;
     margin-left: auto;
     margin-right: auto;
 }
@@ -669,7 +706,7 @@ body {
 }
 
 @media (max-width: 1200px) {
-    .section3-item-container {
+    .section3-bottom {
         flex-wrap: wrap;
         justify-content: center;
         gap: 15px;
@@ -691,7 +728,7 @@ body {
 
 /* Section 4 */
 
-.section4-item-container {
+.section4-wrapper {
     display: flex;
     justify-content: space-between;
     max-width: 1240px;
@@ -705,7 +742,7 @@ body {
     position: relative;
 }
 
-.section4-left-item-elips img {
+.section4-elips img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -718,10 +755,13 @@ body {
     object-fit: cover;
 }
 
-.section4-left-item-iphone img {
+.section4-iphone img {
     display: block;
-    max-width: 100%;
+    max-width: 620px;
+    width: 100%;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .section4-right-item {
@@ -730,22 +770,24 @@ body {
     max-width: 574px;
 }
 
-.section4-right-item-title {
+.section4-right-title {
     display: block;
 }
 
-.section4-right-item-post {
+.section4-right-post {
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
 
-.section4-right-item-post img {
-    width: 24px;
-    height: 24px;
+.section4-right-post img {
+    display: block;
+    max-width: 24px;
+    width: 100%;
+    height: auto;
 }
 
-.section4-right-item-title h2 {
+.section4-right-title h2 {
     font-family: var(--font-primary);
     font-style: normal;
     font-weight: 500;
@@ -756,7 +798,7 @@ body {
     color: #C23893;
 }
 
-.section4-right-item-title h3 {
+.section4-right-title h3 {
     font-family: var(--font-primary);
     font-style: normal;
     font-weight: 500;
@@ -767,7 +809,7 @@ body {
     margin-top: 7px;
 }
 
-.section4-right-item-post h5 {
+.section4-right-post h5 {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -792,7 +834,7 @@ body {
 }
 
 @media (max-width: 992px) {
-    .section4-item-container {
+    .section4-wrapper {
         flex-direction: column;
     }
 
@@ -802,6 +844,10 @@ body {
         max-width: 80%;
     }
 
+    .section4-iphone img {
+        width: 80%;
+    }
+
     .section4-right-item {
         margin-left: auto;
         margin-right: auto;
@@ -809,21 +855,26 @@ body {
         max-width: 80%;
     }
 
-    .section4-right-item-post p {
+    .section4-right-post p {
         text-align: left;
     }
 }
 
 @media (max-width: 768px) {
-    .section4-left-item-elips img {
+    .section4-elips img {
         max-width: 500px;
+        width: 100%;
     }
 
-    .section4-right-item-title h3 {
+    .section4-iphone img {
+        width: 60%;
+    }
+
+    .section4-right-title h3 {
         font-size: 50px;
     }
 
-    .section4-right-item-post p {
+    .section4-right-post p {
         text-align: left;
     }
 }
@@ -840,7 +891,7 @@ body {
 }
 
 .section5-item-left {
-    display:block;
+    display: block;
     max-width: 603px;
 }
 
@@ -876,6 +927,12 @@ body {
     text-transform: capitalize;
     color: #FFFFFF;
     margin-top: 52px;
+    transition: all 0.2s ease;
+}
+
+.section5-item-left a:hover {
+    box-shadow: 0 2px 4px #FFFFFF;
+    transform: translateY(2px);
 }
 
 .section5-item-right {
@@ -883,7 +940,7 @@ body {
     position: relative;
 }
 
-.section5-item-right-ellipse img {
+.section5-ellipse img {
     display: block;
     position: absolute;
     z-index: -1;
@@ -895,11 +952,13 @@ body {
     height: auto;
 }
 
-.section5-item-right-screenshot img {
+.section5-screenshot img {
     display: block;
-    width: 512px;
-    max-width: 100%;
+    width: 100%;
+    max-width: 512px;
     height: auto;
+    margin-left: auto;
+    margin-right: auto;
 
 }
 
@@ -920,7 +979,8 @@ body {
         margin-right: auto;
     }
 
-    .section5-item-left h2,p {
+    .section5-item-left h2,
+    p {
         text-align: center;
     }
 
@@ -936,15 +996,24 @@ body {
         margin-right: auto;
         max-width: 100%;
     }
+
+    .section5-screenshot img {
+        width: 80%;
+    }
 }
-    @media (max-width: 768px) {
-        .section5-item-right-ellipse img {
-            max-width: 500px;
-            width: 100%;
+
+@media (max-width: 768px) {
+    .section5-ellipse img {
+        max-width: 500px;
+        width: 100%;
     }
 
-        .section5-item-left h2 {
-            font-size: 50px;
+    .section5-screenshot img {
+        width: 60%;
+    }
+
+    .section5-item-left h2 {
+        font-size: 50px;
     }
 }
 
@@ -1019,8 +1088,9 @@ body {
 
 .section6-item-block img {
     display: block;
-    width: 40px;
-    height: 40px;
+    max-width: 40px;
+    width: 100%;
+    height: auto;
 }
 
 .section6-item-block h3 {
@@ -1102,15 +1172,17 @@ body {
 
     .section6-item-block:nth-child(2) {
         padding-top: 58px;
-        border-bottom: 1px solid #C23893;;
+        border-bottom: 1px solid #C23893;
+        ;
     }
 }
 
 /* Section 7 */
 
-.section7-item-container {
+.section7-wrapper {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
     max-width: 1240px;
     margin-left: auto;
     margin-right: auto;
@@ -1137,8 +1209,10 @@ body {
 
 .section7-left-item-iphone img {
     display: block;
-    max-width: 100%;
+    max-width: 500px;
+    width: 100%;
     height: auto;
+
 }
 
 .section7-right-item {
@@ -1195,8 +1269,13 @@ body {
     margin-right: auto;
 }
 
+.section7-right-item a:hover {
+    box-shadow: 0 2px 4px #FFFFFF;
+    transform: translateY(2px);
+}
+
 @media (max-width: 992px) {
-    .section7-item-container {
+    .section7-wrapper {
         flex-direction: column;
     }
 
@@ -1206,7 +1285,7 @@ body {
     }
 
     .section7-left-item-iphone img {
-        max-width: 80%;
+        width: 80%;
     }
 
     .section7-right-item {
@@ -1239,6 +1318,10 @@ body {
 
     .section7-right-item h3 {
         font-size: 33px;
+    }
+
+    .section7-left-item-iphone img {
+        width: 60%;
     }
 }
 
@@ -1315,9 +1398,10 @@ body {
 }
 
 .section8-photo-container img {
+    display: block;
     max-width: 380px;
     width: 100%;
-    height: 100%;
+    height: auto;
     border-radius: 24px;
     object-fit: cover;
 }
@@ -1331,7 +1415,11 @@ body {
     width: 100%;
     background: linear-gradient(0deg, #000000 0%, rgba(0, 0, 0, 0) 100%);
     opacity: 0.8;
+    transition: 0.3s all;
+}
 
+.section8-photo-container:hover::after {
+    top: 40%;
 }
 
 .section8-photo-content {
@@ -1394,6 +1482,7 @@ body {
 .section8-icon-container img {
     display: block;
     position: relative;
+    max-width: 70px;
     width: 100%;
     height: auto;
 }
@@ -1467,29 +1556,30 @@ body {
         margin-right: auto;
     }
 }
-    @media (max-width:768px) {
-        .section8-photo-container {
-            max-width: 100%;
-        }
+
+@media (max-width:768px) {
+    .section8-photo-container {
+        max-width: 100%;
+    }
+}
+
+@media (max-width: 768px) {
+    .section8 {
+        margin-top: 130px;
     }
 
-    @media (max-width: 768px) {
-        .section8 {
-            margin-top: 130px;
-        }
-
-        .section8-title h2 {
-            font-size: 40px;
-        }
-
-        .section8-title::after {
-            margin-left: 20px;
-        }
-
-        .section8-title::before {
-            margin-right: 20px;
-        }
+    .section8-title h2 {
+        font-size: 40px;
     }
+
+    .section8-title::after {
+        margin-left: 20px;
+    }
+
+    .section8-title::before {
+        margin-right: 20px;
+    }
+}
 
 /* Section 9 */
 
@@ -1572,13 +1662,30 @@ body {
     background-color: #FFFFFF;
 }
 
+.footer-item1 a {
+    font-family: var(--font-secondary);
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    color: #12132A;
+    text-decoration: none;
+    border-bottom: 1px solid transparent;
+    transition: 0.3s all;
+}
+
+.footer-item1 a:hover {
+    border-color: #12132A;
+    border-color: currentColor;
+}
+
 .footer-item1-container {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     max-width: 1066px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 15px;
+    margin-right: 15px;
 }
 
 .footer-item1 h5 {
@@ -1658,6 +1765,13 @@ body {
     gap: 24px;
 }
 
+.footer-item2-right-block img {
+    display: block;
+    max-width: 24px;
+    width: 100%;
+    height: auto;
+}
+
 @media(max-width:1200px) {
     .footer-item1-container {
         max-width: 100%;
@@ -1672,6 +1786,8 @@ body {
     .footer-item1-container {
         flex-wrap: wrap;
         max-width: 70%;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .footer-item1-group1 {
